# libnetwrk

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  codeql.yml  tests.yml
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  example_logging.hpp
examples/tcp_echo/: commands.hpp  service_desc.hpp  tcp_echo_client.cpp  tcp_echo_server.cpp  tcp_echo_service.cpp
include/: libnetwrk.hpp
include/libnetwrk/dependencies/asio/: asio.hpp
include/libnetwrk/dependencies/asio/asio/: associated_allocator.hpp  associated_executor.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_io_object.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  bind_executor.hpp  buffer.hpp  buffered_read_stream.hpp  buffered_stream.hpp  buffered_write_stream.hpp  buffers_iterator.hpp  co_spawn.hpp  completion_condition.hpp  compose.hpp  connect.hpp  deadline_timer.hpp  defer.hpp  detached.hpp  dispatch.hpp  error.hpp  error_code.hpp  execution_context.hpp  executor.hpp  executor_work_guard.hpp  handler_alloc_hook.hpp  (+40 more)
include/libnetwrk/exceptions/: libnetwrk_exception.hpp
include/libnetwrk/net/: default_service_desc.hpp  logging.hpp  macros.hpp  type_traits.hpp
include/libnetwrk/net/containers/: buffer.hpp  dynamic_buffer.hpp  fixed_buffer.hpp
include/libnetwrk/net/core/: auth.hpp  base_client.hpp  base_client_connection.hpp  base_connection.hpp  base_server.hpp  base_service.hpp  base_service_connection.hpp  context.hpp  enums.hpp  libnetwrk_context.hpp  system_commands.hpp
include/libnetwrk/net/enum/: enum_bitmask_operators.hpp  enums.hpp
include/libnetwrk/net/messages/: message.hpp  message_head.hpp  outgoing_message.hpp  owned_message.hpp
include/libnetwrk/net/misc/: authentication.hpp  coroutine_cv.hpp  crc32.hpp  timestamp.hpp
include/libnetwrk/net/serialization/: bin_serialize.hpp
include/libnetwrk/net/serialize/: serialize.hpp  serialize_adapters.hpp  serialize_endian.hpp  serialize_internal.hpp
include/libnetwrk/net/tcp/: socket.hpp  tcp_client.hpp  tcp_connection.hpp  tcp_resolver.hpp  tcp_server.hpp  tcp_service.hpp
include/libnetwrk/utilities/: dvsku_log.hpp
libnetwrk/: libnetwrk.hpp
libnetwrk/lib/asio/: asio.hpp
libnetwrk/lib/asio/asio/: associated_allocator.hpp  associated_executor.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_io_object.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  bind_executor.hpp  buffer.hpp  buffered_read_stream.hpp  buffered_stream.hpp  buffered_write_stream.hpp  buffers_iterator.hpp  co_spawn.hpp  completion_condition.hpp  compose.hpp  connect.hpp  deadline_timer.hpp  defer.hpp  detached.hpp  dispatch.hpp  error.hpp  error_code.hpp  execution_context.hpp  executor.hpp  executor_work_guard.hpp  handler_alloc_hook.hpp  handler_continuation_hook.hpp  (+39 more)
libnetwrk/libnetwrk/asio/: asio.hpp
libnetwrk/libnetwrk/asio/asio/: associated_allocator.hpp  associated_executor.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_io_object.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  bind_executor.hpp  buffer.hpp  buffered_read_stream.hpp  buffered_stream.hpp  buffered_write_stream.hpp  buffers_iterator.hpp  co_spawn.hpp  completion_condition.hpp  compose.hpp  connect.hpp  coroutine.hpp  deadline_timer.hpp  defer.hpp  detached.hpp  dispatch.hpp  error.hpp  error_code.hpp  execution_context.hpp  executor.hpp  executor_work_guard.hpp  handler_alloc_hook.hpp  (+40 more)
libnetwrk/libnetwrk/net/: assert.hpp  definitions.hpp  logging.hpp  macros.hpp  message.hpp  type_traits.hpp
libnetwrk/libnetwrk/net/common/: base_client.hpp  base_connection.hpp  base_context.hpp  base_server.hpp  context.hpp
libnetwrk/libnetwrk/net/core/: base_client.hpp  base_connection.hpp  base_server.hpp  context.hpp
libnetwrk/libnetwrk/net/tcp/: tcp_client.hpp  tcp_connection.hpp  tcp_server.hpp
libnetwrk/libnetwrk/utilities/: dvsku_log.hpp  log.hpp
libnetwrk/libnetwrk/utilities/traits/: non_copyable.hpp  non_moveable.hpp
source/: CMakeLists.txt
src/: CMakeLists.txt  libnetwrk.cpp  libnetwrk.h  libnetwrk.hpp
src/impl/: libnetwrk.cpp
src/impl/utilities/: buffers.cpp
src/include/: libnetwrk.hpp
src/include/lib/asio/asio/ip/impl/: address.ipp
src/include/net/: definitions.hpp  message.hpp
src/include/net/common/: base_connection.hpp  connection.hpp  message.hpp
src/include/net/common/containers/: tsdeque.hpp
src/include/net/common/serialization/: serializable.hpp  serialize.hpp  type_traits.hpp
src/include/net/tcp/: tcp_client.hpp  tcp_connection.hpp  tcp_server.hpp
src/include/utilities/: buffers.hpp
src/libnetwrk/net/: definitions.hpp  message.hpp
src/libnetwrk/net/common/serialization/: serializable.hpp  serialize.hpp
src/libnetwrk/utilities/: buffers.hpp
test/: CMakeLists.txt  test_binary_serializer.cpp  test_buffer.cpp  test_message.cpp  test_serializable.cpp  test_serialize.cpp  test_service_client.cpp  test_tcp_client.cpp  test_tcp_command_type.cpp  test_tcp_server.cpp  test_tcp_server_client.cpp  test_tcp_service.cpp  test_tcp_service_client.cpp  test_tcp_talk.cpp  test_tsdeque.cpp  test_tslist.cpp  test_type_traits.cpp  utilities_assert.hpp
test/architecture/: architecture_x64.data
(+1205 files in other folders)
