CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

PROJECT(libnetwrk C CXX)
ENABLE_TESTING()

IF(UNIX)
    SET(CMAKE_CXX_STANDARD 20)
    SET(CMAKE_CXX_FLAGS "-pthread")
ENDIF()
    
IF(WIN32)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)    
    ADD_DEFINITIONS(-D_WIN32_WINNT=0x0601)
    ADD_DEFINITIONS(-D_SILENCE_STDEXT_ARR_ITERS_DEPRECATION_WARNING)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++20 /EHsc")
ENDIF()

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/libnetwrk")

ADD_SUBDIRECTORY("examples")
ADD_SUBDIRECTORY("test")