CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

IF(POLICY CMP0135)
    CMAKE_POLICY(SET CMP0135 NEW)
ENDIF()

IF(POLICY CMP0077)
    CMAKE_POLICY(SET CMP0077 NEW)
ENDIF()

OPTION(LIBNETWRK_TEST     "Build tests."    ON)
OPTION(LIBNETWRK_EXAMPLES "Build examples." ON)

PROJECT(libnetwrk C CXX)

GET_DIRECTORY_PROPERTY(PARENT_DIR PARENT_DIRECTORY)
IF(PARENT_DIR STREQUAL "")
    SET(LIBNETWRK_TOP_LEVEL TRUE)
ELSE()
    SET(LIBNETWRK_TOP_LEVEL FALSE)
ENDIF()

IF(LIBNETWRK_TEST)
    ENABLE_TESTING()
ENDIF()

SET(LIBNETWRK_ROOT     "${PROJECT_SOURCE_DIR}")
SET(LIBNETWRK_INCLUDES "${PROJECT_SOURCE_DIR}/include")

IF(LIBNETWRK_TOP_LEVEL)
    IF(UNIX AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
        SET(CMAKE_CXX_STANDARD 20)

        SET(CMAKE_CXX_FLAGS         "-pthread")
        SET(CMAKE_CXX_FLAGS_DEBUG   "-O0")
        SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
        
        IF(LIBNETWRK_LINUX_ARCHITECTURE STREQUAL "x86")
            SET(CMAKE_CXX_FLAGS "-m32 ${CMAKE_CXX_FLAGS}")
        ENDIF()
    ELSEIF(WIN32)
        ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)    
        ADD_DEFINITIONS(-D_WIN32_WINNT=0x0601)
        ADD_DEFINITIONS(-D_SILENCE_STDEXT_ARR_ITERS_DEPRECATION_WARNING)

        SET(CMAKE_CXX_FLAGS         "/std:c++20 /DWIN32 /D_WINDOWS /W3 /EHsc /GR /GL- /bigobj")
        SET(CMAKE_CXX_FLAGS_DEBUG   "/Od /Ob0 /RTC1 /Zi")
        SET(CMAKE_CXX_FLAGS_RELEASE "/O2 /Ob2 /DNDEBUG")
    ENDIF()

    IF(NOT LIBNETWRK_CLI_FLAGS STREQUAL "")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LIBNETWRK_CLI_FLAGS}")
    ENDIF()
ENDIF()

ADD_SUBDIRECTORY("dependencies")
ADD_SUBDIRECTORY("source")

IF(LIBNETWRK_TEST)
    ADD_SUBDIRECTORY("test")
ENDIF()

IF(LIBNETWRK_EXAMPLES)
    ADD_SUBDIRECTORY("examples")
ENDIF()