CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT("libnetwrk" C CXX)

ADD_LIBRARY(${PROJECT_NAME} STATIC  "libnetwrk.h" "libnetwrk.cpp")

IF(CMAKE_VERSION VERSION_GREATER 3.12)
    SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
ELSEIF(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 5)
    SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
ELSE()
    SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
ENDIF()